modified:   context.json 	modified:   custom_handlebar.js 	new file:   event_sample.json 	new file:   public/index.js 	modified:   public/style.css 	modified:   server.js 	modified:   times.json 	modified:   views/calendar_app.handlebars 	modified:   views/layouts/main.handlebars 	modified:   views/partials/day_grid.handlebars

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,6 +6,7 @@
         <!-- Scripts | Stylesheets | Metacode-->
         <link rel="stylesheet" href="/style.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.runtime.js" defer></script>
+        <script src="/index.js" defer></script>
 
     </head>
 
@@ -22,18 +23,18 @@
         <div class="bar month-container">
             <ul class="uilist" id="monthlist">
                 <!--Possibly an @media to do full names of months -->
-                <li class="list-month"><span class="month">Jan</span></li>
-                <li class="list-month"><span class="month">Feb</span></li>
-                <li class="list-month"><span class="month">Mar</span></li>
-                <li class="list-month"><span class="month">Apr</span></li>
-                <li class="list-month"><span class="month">May</span></li>
-                <li class="list-month"><span class="month">Jun</span></li>
-                <li class="list-month"><span class="month">Jul</span></li>
-                <li class="list-month"><span class="month">Aug</span></li>
-                <li class="list-month"><span class="month">Sep</span></li>
-                <li class="list-month"><span class="month">Oct</span></li>
-                <li class="list-month"><span class="month">Nov</span></li>
-                <li class="list-month"><span class="month">Dec</span></li>
+                <li class="list-month"><a class="month" href='/0/0/2019'>Jan</a></li>
+                <li class="list-month"><a class="month" href='/1/0/2019'>Feb</a></li>
+                <li class="list-month"><a class="month" href='/2/0/2019'>Mar</a></li>
+                <li class="list-month"><a class="month" href='/3/0/2019'>Apr</a></li>
+                <li class="list-month"><a class="month" href='/4/0/2019'>May</a></li>
+                <li class="list-month"><a class="month" href='/5/0/2019'>Jun</a></li>
+                <li class="list-month"><a class="month" href='/6/0/2019'>Jul</a></li>
+                <li class="list-month"><a class="month" href='/7/0/2019'>Aug</a></li>
+                <li class="list-month"><a class="month" href='/8/0/2019'>Sep</a></li>
+                <li class="list-month"><a class="month" href='/9/0/2019'>Oct</a></li>
+                <li class="list-month"><a class="month" href='/10/0/2018'>Nov</a></li>
+                <li class="list-month"><a class="month" href='/11/0/2018'>Dec</a></li>
             </ul>
         </div>
     </main>
