--- a/views/calendar_app.handlebars
+++ b/views/calendar_app.handlebars
@@ -1,6 +1,7 @@
 <aside>
         <!-- Calendar Piece -->
         <!-- This could be an aside if necessary-->
+        <div class="requestVar">{{context.local}}</div>
         <div class="app container">
             <div class="app inner-div" id="cloud-calendar-app">
                 <div class="bar day-container" id="daylist-container">
@@ -28,9 +29,9 @@
                     {{> day_grid context}}
                 </div>
                 <div class = "button_housing">
-                    <a href="#" class="cycle-button prev_button">&laquo; Prev</a>  
+                    <a href="{{context.last}}" class="cycle-button prev_button">&laquo; Prev</a>  
                     <label><span class="dates-text" id="current-Dates">These Are Dates</span></label>
-                    <a href="#" class="cycle-button next_button">Next &raquo;</a>
+                    <a href="{{context.next}}" class="cycle-button next_button">Next &raquo;</a>
                 </div> 
             </div>
         </div>
