--- a/views/events.handlebars
+++ b/views/events.handlebars
@@ -1,9 +1,4 @@
-
-{{#if base}}
-<link href="{{base}}/util-styles.css" rel="stylesheet">
-{{else}}
-<link href="util-styles.css" rel="stylesheet">
-{{/if}}
+<link href="/util-styles.css" rel="stylesheet">
 
 {{#unless event}}
     <div class="single-headline-container">
@@ -11,9 +6,8 @@
     </div>
 {{/unless}}
 
-{{! If event is defined so should bass. Please define it as correct relative path!}}
 {{#if event}}
-<link href="{{bass}}/event-styles.css" rel="stylesheet">
+<link href="/event-styles.css" rel="stylesheet">
 <div class="full-container">
     {{#each event}}
         {{> single_event}}
