--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,7 +22,7 @@
         <!-- Month List -->
         <div class="bar month-container">
             <ul class="uilist" id="monthlist">
-                <!--Possibly an @media to do full names of months -->
+                <!-- Links To Each Month -->
                 <li class="list-month"><a class="month" href='/0/0/2019'>Jan</a></li>
                 <li class="list-month"><a class="month" href='/1/0/2019'>Feb</a></li>
                 <li class="list-month"><a class="month" href='/2/0/2019'>Mar</a></li>
@@ -41,6 +41,7 @@
     
     {{{body}}}
 
+    <!-- Credits -->
     <footer>
         <span class="authors">Alexander Guyer</span>
         <span class="authors">Tyler Titsworth</span>
