--- a/views/partials/time_list.handlebars
+++ b/views/partials/time_list.handlebars
@@ -1,3 +1,4 @@
+<!-- Time Column html template -->
 <div class="times-container times col">
     <ul class="tiny times" id="time-list">
     {{#each times}}
