--- a/views/calendar_app.handlebars
+++ b/views/calendar_app.handlebars
@@ -1,11 +1,12 @@
+<!-- Main Calendar Page -->
 <aside>
-        <!-- Calendar Piece -->
         <!-- This could be an aside if necessary-->
         <div class="requestVar">{{context.local}}</div>
         <div class="app container">
             <div class="app inner-div" id="cloud-calendar-app">
                 <div class="bar day-container" id="daylist-container">
                     <ul class="uilist" id="daylist">
+                        <!-- Prints the list of days --> 
                         <li class= "list-day splitter" id="initial-split"><span class="day blank-day"></span></li>
                         <li class="list-day mon"><span class="day mon">Mon</span> <span class='bigNum'>{{context.weekDates.Mon}}</span></li>
                         <li class= "list-day splitter"><span class="day blank-day"></span></li>
@@ -23,20 +24,23 @@
                     </ul>
                 </div>
                 <div class="columns" id="collumn-chart">
-                    {{!time list}}
+                    <!-- Prints the list of times along the left column -->
                     {{> time_list context}}
+                    <!-- Prints the grid of days -->
                     {{! This will print out the Day Collumns}}
                     {{> day_grid context}}
                 </div>
+
+                <!-- Prints next and last buttons -->
                 <div class = "button_housing">
                     <a href="{{context.last}}" class="cycle-button prev_button">&laquo; Prev</a>  
                     <label><span class="dates-text" id="current-Dates">{{context.weekDates.Mon}} &laquo;---{{context.month}}---&raquo; {{context.weekDates.Sun}}</span></label>
                     <a href="{{context.next}}" class="cycle-button next_button">Next &raquo;</a>
                 </div> 
+
+                <!-- Prints the year -->
                 <div class = "year-disp">{{context.year}}</div>
+            
             </div>
         </div>
-
-        
-        
 </aside>
