--- a/views/calendar_app.handlebars
+++ b/views/calendar_app.handlebars
@@ -1,4 +1,45 @@
 <!-- Main Calendar Page -->
+//Button
+
+<button type="button" id="add-button"><i class="button"></i></button>
+    <div id="modal-backdrop" class="hidden"></div>
+    <div id="add-button" class="hidden">
+        <div class="modal-dialog">
+            <div class="modal-header">
+                <h3>Create New Event</h3>
+                <button type="button" id="modal-close" class="modal-hide-button">&times;</button>
+            </div>
+        <div class="modal-body">
+            <div class="post-input-element">
+                <label for="post-title-input">Title</label>
+                <input type="text" placeholder="Title" id="post-title-input"></input>
+            </div>
+          
+            <div class="post-input-element">
+                <label for="post-time1-input">Start Time</label>
+                <input type="text" placeholder="Month DD, YYYY HH:MM:SS" id="post-time1-input"> //alternative format: YYYY-MM-DDTHH:MM:SS
+            </div>
+
+            <div class="post-input-element">
+                <label for="post-time2-input">End Time</label>
+                <input type="text" placeholder="Month DD, YYYY HH:MM:SS"" id="post-time2-input">
+            </div>
+
+            <div class="post-input-element">
+                <label for="post-repeat-input">Repeated Weekly</label>
+                <input type="checkbox" id="post-repeat-input">
+            </div>
+
+        </div>
+
+        <div class="modal-footer">
+            <button type="button" id="modal-cancel" class="modal-hide-button action-button">Cancel</button>
+            <button type="button" id="modal-accept" class="action-button">Create Event</button>
+        </div>
+
+        </div>
+    </div>
+
 <aside>
         <!-- This could be an aside if necessary-->
         <div class="requestVar">{{context.local}}</div>
