Recent changes, add-button changes

--- a/views/calendar_app.handlebars
+++ b/views/calendar_app.handlebars
@@ -1,5 +1,5 @@
 <!-- Main Calendar Page -->
-//Button
+<!--- Button --->
 
 <button type="button" id="add-button"><i class="button"></i></button>
     <div id="modal-backdrop" class="hidden"></div>
@@ -17,7 +17,7 @@
           
             <div class="post-input-element">
                 <label for="post-time1-input">Start Time</label>
-                <input type="text" placeholder="Month DD, YYYY HH:MM:SS" id="post-time1-input"> //alternative format: YYYY-MM-DDTHH:MM:SS
+                <input type="text" placeholder="Month DD, YYYY HH:MM:SS" id="post-time1-input">
             </div>
 
             <div class="post-input-element">
