Added SASS to the project package.

--- a/views/404.handlebars
+++ b/views/404.handlebars
@@ -1,5 +1,6 @@
 <!-- 404 Error page -->
 <link href="util-styles.css" rel="stylesheet">
+<link href="/compiled/util-styles.css" rel="stylesheet">
 
 <div class="single-headline-container">
     <h1 class="single-headline">404 No Page!</h1>
