--- a/views/events.handlebars
+++ b/views/events.handlebars
@@ -1,5 +1,6 @@
 <!-- Events Page html template -->
 <link href="/util-styles.css" rel="stylesheet">
+<link href="/compiled/util-styles.css" rel="stylesheet">
 
 <!-- Case for if there are no events on this date-->
 {{#unless event}}
@@ -12,6 +13,7 @@
 {{#if event}}
     <!-- Event Styles -->
     <link href="/event-styles.css" rel="stylesheet">
+    <link href="/compiled/event-styles.css" rel="stylesheet">
 
     <!-- prints events -->
     <div class="full-container">
