--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,6 +5,7 @@
     <head>
         <!-- Scripts | Stylesheets | Metacode-->
         <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="/compiled/main.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.runtime.js" defer></script>
         <script src="/index.js" defer></script>
 
