--- a/views/calendar_app.handlebars
+++ b/views/calendar_app.handlebars
@@ -22,7 +22,7 @@
 
             <div class="post-input-element">
                 <label for="post-time2-input">End Time</label>
-                <input type="text" placeholder="Month DD, YYYY HH:MM:SS"" id="post-time2-input">
+                <input type="text" placeholder="Month DD, YYYY HH:MM:SS" id="post-time2-input">
             </div>
 
             <div class="post-input-element">
