--- a/public/style.css
+++ b/public/style.css
@@ -308,3 +308,45 @@ footer::before{
 .hidden{
 	display: none;
 }
+
+.addButton{
+    position: fixed;
+    right: 30px;
+    bottom: 30px;
+    height: 60px;
+    width: 60px;
+    border: none;
+    border-radius: 30px;
+    font-size: 36px;
+    background-color: #f67811;
+    color: #fff;
+    cursor: pointer;
+    box-shadow: 4px 4px 12px rgba(0, 0, 0, 0.25);
+}
+
+.fa-plus{
+    color: white;
+    font-size: 30px;
+}
+
+
+#modalBackdrop {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
+    background-color: rgba(0, 0, 0, 0.85);
+  }
+
+  #addModal{
+    color: #fff;
+    justify-self: center;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 1010;
+  }
