--- a/views/calendar_app.handlebars
+++ b/views/calendar_app.handlebars
@@ -1,7 +1,7 @@
 <!-- Main Calendar Page -->
 
 <!--- Add button stuff--->
-<button type="button" class="addButton"><i class="add-button"></i></button>
+<button type="button" class="add-Button"><i class="add-button"></i></button>
 
 <div id="modalBackdrop" class="hidden"></div>
 <div id="addModal" class="hidden">
