--- a/views/calendar_app.handlebars
+++ b/views/calendar_app.handlebars
@@ -5,11 +5,11 @@
 
 <div id="modalBackdrop" class="hidden"></div>
 <div id="addModal" class="hidden">
-    <form class="modal-dialog">        
+    <form id="modalForm">        
         
         <div class="modal-header">
             <h3>Create New Event</h3>
-            <button type="button" id="modal-close" class="modal-hide-button">&times;</button>
+            <button type="button" id="modal-close" class="modalHideButton">&times;</button>
         </div>
         
         <div class="modal-body">
@@ -39,7 +39,7 @@
         </div>
 
         <div class="modal-footer">
-            <button type="button" id="modal-cancel" class="modal-hide-button action-button">Cancel</button>
+            <button type="button" id="modal-cancel" class="modalCancelButton">Cancel</button>
             <button type="button" id="modal-accept" class="actionButton">Create Event</button>
         </div>
 
