Almost Finished with Single Event Views

--- a/sass/_theme.scss
+++ b/sass/_theme.scss
@@ -13,11 +13,25 @@ $off-text-color:  #e47637;
 $off-text-color1: #a6b9db;
 $off-text-color1-highlight: #b6c9eb;
 $border-color: #5f2a5f;
-
+$text-size: 16px;
 
 $gridbox-color: unquote('#d87cd033');
 $gridbox-color-on: unquote('#d87dd099');
 
-$background-color: #d8c4f0;
+$background-color: #eadff7;
 $background-color1: #440a44;
 $background-color2: #5f2a5f;
+$background-color-shade: unquote('#e5bedd44');
+
+%flex_box{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+%main_container{
+    @extend %flex_box;
+    height: 1000px;
+    max-width: 100%;
+    align-items: baseline;
+}
