--- a/sass/main.scss
+++ b/sass/main.scss
@@ -31,8 +31,9 @@ h1{
     color: $header-color;
 }
 
-/* Aside */
+/* Header End */
 
+/* Months List Bar */
 /* Main */
 main{
     min-width: 940px;
@@ -70,191 +71,6 @@ main{
 
 /* End Month List Bar */
 
-/* App Container and Unordered lists*/
-
-.container{
-    @extend %flex_box;
-    min-width: 1400px;
-    min-height: 1000px;
-    max-width: 100%;
-    margin: 0px 20px;
-    padding: 0px;
-
-    align-items: initial;
-}
-
-.inner-div{
-    display: block;
-    width: 100%;
-}
-
-.button_housing{
-    @extend %flex_box;
-    justify-content: center;
-    padding: 15px;
-}
-
-/* Day Lists Bar */
-.day-container{
-    height: 40px;
-}
-
-.list-day{
-    display: inline-block;
-    width: 32px;
-}
-
-#daylist{
-    margin: 0px;
-    white-space: nowrap;
-    padding: 0px;
-}
-
-#initial-split{
-    width: 70px;
-    flex-shrink: 2;
-}
-
-.splitter{
-    white-space: nowrap;
-    content: "";
-    display: inline-flex;
-    height: 18px;
-    width: 63px;
-}
-/* Day Lists Bar End */
-
-/* Collumns */
-.columns{
-    display: flex;
-    justify-content: center;
-    padding: 0px 80px;
-}
-
-.col{
-    height: 800px;
-    width: 100px;
-
-    border: solid $border-color;
-    border-top-width: 1px;
-    border-right-width: 1px;
-    border-bottom-width: 1px;
-    border-left-width: 1px;
-    border-radius: 6px 6px;
-    margin: 0px 0px;
-}
-
-.grid-box{
-    display: block;
-
-    margin: 0px 2px;
-    height: 31.3px;
-    width: 97%;
-
-    background-color: $gridbox-color;
-
-    border: solid $border-color;
-    border-top-width: 1px;
-    border-right-width: 1px;
-    border-bottom-width: 1px;
-    border-left-width: 1px;
-    border-radius: 6px 6px;
-    margin: 0px 0px;
-}
-
-.grid-box:hover{
-    background-color:$gridbox-color-on;
-    cursor: pointer;
-}
-/* Collumns End */
-
-/* Times */
-.times-container{
-    width: 6%;
-    
-}
-
-.tiny{
-    flex-shrink: 2;
-    margin: 0px;
-    padding: 0px;
-    list-style-type: none;
-    white-space: nowrap;
-}
-
-.tiny li{
-    padding: 2.5px 0px;
-    margin: 0px 5px 10px 5px;
-}
-
-.time-text{
-    display: inline-block;
-    font-size: 16px;
-    color: $off-text-color;
-}
-
-.AM::after{
-    content: "AM";
-}
-
-.PM::after{
-    content: "PM";
-}
-
-@media only screen and (max-width: 1475px){
-    .AM::after{
-        content: "";
-    }
-    
-    .PM::after{
-        content: "";
-    }
-
-    .container{
-        min-width: 960px;
-    }
-}
-
-/* Times End */
-
-/* Button */
-
-.cycle-button{
-    display: inline-block;
-    padding: 0px 4px;
-    margin: 0px 4px;
-    height: 20px; /* Quirk Found when leaving this unspecified */
-
-    border: 1px solid black;
-    border-radius: 4px;
-    background-color: $background-color1;
-
-    font-family: $text-font;
-    font-size: 16px;
-    font-weight: 5;
-    color: $off-text-color1;
-    font-style: none;
-    text-decoration: none;
-}
-
-.cycle-button:hover{
-    font-size: 20px;
-    font-weight: 6;
-    color: $off-text-color1-highlight;
-    background-color: $background-color2;
-    height: 24px; /* Quirk found when leaving this unspecified */
-}
-
-.dates-text{
-    font-family: $text-font;
-    font-size: 25px;
-    color: $main-color;
-    padding-left: 10px;
-    padding-right: 10px;
-}
-
-/* Button End */
-
 /* Footer */
 
 .authors{
@@ -277,38 +93,3 @@ footer::before{
 
 /* Footer End */
 
-/*single event stuff*/
-
-.event-container{
-    justify-self: center;
-    display: inline-block;
-    width: 400px;
-    height: 500px;
-    border: 3px solid $border-color;
-}
-
-.event-name{
-    display: block;
-    text-align: center;
-    font-size: 20px;
-
-}
-
-.requestVar{
-    visibility: hidden;
-}
-
-.bigNum{
-    padding: 8px;
-    font-size: 25px;
-    font-weight: 300;
-}
-
-.year-disp{
-    @extend %flex_box;
-    font-size: 25px;
-    color: $main-color;
-}
-.hidden{
-	display: none;
-}
