Added Menu Button With Style

--- a/sass/_theme.scss
+++ b/sass/_theme.scss
@@ -37,3 +37,7 @@ $background-color-shade: unquote('#e5bedd44');
     align-items: baseline;
     min-width: 240px;
 }
+
+.hidden{
+    display: none;
+}
