--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,6 +13,8 @@
     </head>
 
     <header>
+        <!-- Button for Month's Bar -->
+        <div class="month-button fas fa-bars"></div>
         <!--Title for the site-->
         <div class="bar header">
             <h1>My Cloud Calendar</h1>
