--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,11 +12,11 @@
 
     </head>
 
-    <header>
+    <header class="bar">
         <!-- Button for Month's Bar -->
         <div class="month-button fas fa-bars"></div>
         <!--Title for the site-->
-        <div class="bar header">
+        <div class="header-container">
             <h1>My Cloud Calendar</h1>
         </div>
     </header>
@@ -24,7 +24,7 @@
         <!-- APP -->
 
         <!-- Month List -->
-        <div class="bar month-container">
+        <div class="bar month-container  hidden">
             <ul class="uilist" id="monthlist">
                 <!-- Links To Each Month -->
                 <li class="list-month"><a class="month" href='/0/0/2019'>Jan</a></li>
