--- a/views/partials/modal.handlebars
+++ b/views/partials/modal.handlebars
@@ -40,7 +40,7 @@
         </div>
 
         <div class="modal-footer">
-            <button type="button" id="modal-cancel" class="modal-hide-button action-button">Cancel</button>
+            <button type="button" id="modal-cancel" class="modal-cancel-button action-button">Cancel</button>
             <button type="button" id="modal-accept" class="actionButton">Create Event</button>
         </div>
 
