--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,7 @@
 
     <header class="bar">
         <!-- Button for Month's Bar -->
-        <div class="month-button fas fa-bars"></div>
+        <div class="month-button fas fa-bars" id="month-button0"></div>
         <!--Title for the site-->
         <div class="header-container">
             <h1>My Cloud Calendar</h1>
