--- a/views/partials/modal.handlebars
+++ b/views/partials/modal.handlebars
@@ -9,7 +9,7 @@
         
         <div class="modal-header">
             <h3>Create New Event</h3>
-            <button type="button" id="modal-close" class="modal-hide-button">&times;</button>
+            <button type="button" id="modal-close" class="modal-cancel-button">&times;</button>
         </div>
         
         <div class="modal-body">
