--- a/views/partials/modal.handlebars
+++ b/views/partials/modal.handlebars
@@ -9,7 +9,7 @@
         
         <div class="modal-header">
             <h3>Create New Event</h3>
-            <button type="button" id="modal-close" class="modal-cancel-button">&times;</button>
+            <button type="button" id="modal-close" class="modal-hide-button">&times;</button>
         </div>
         
         <div class="modal-body">
@@ -40,7 +40,7 @@
         </div>
 
         <div class="modal-footer">
-            <button type="button" id="modal-cancel" class="modal-cancel-button action-button">Cancel</button>
+            <button type="button" id="modal-cancel" class="modal-hide-button action-button">Cancel</button>
             <button type="button" id="modal-accept" class="actionButton">Create Event</button>
         </div>
 
