--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,7 +17,7 @@
         <div class="month-button fas fa-bars" id="month-button0"></div>
         <!--Title for the site-->
         <div class="header-container">
-            <h1>My Cloud Calendar</h1>
+            <h1><a href="/" class="headline">My Cloud Calendar</a></h1>
         </div>
     </header>
     <main>
