--- a/views/partials/modal.handlebars
+++ b/views/partials/modal.handlebars
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="/compiled/modal.css">
 
 <!--- Add button stuff--->
-<button type="button" class="addButton"><i class="fa fa-plus"></i></button>
+<div class="addButton"><i class="far fa-plus-square"></i></div>
 
 <div id="modalBackdrop" class="hidden"></div>
 <div id="addModal" class="hidden">
